test/integration/bad/numeric-literal/real-bad1.stan
transformed data {
    real x = .e+44;
}
